# CycleTracker

./: Cargo.toml  Dockerfile  Rocket.toml
.github/workflows/: buildImage.yaml  rust.yml  test.yaml
provider/: Cargo.toml
src/: app.rs  main.rs
src/controllers/: controller.rs  hello_controller.rs  tracker_controller.rs
src/models/: mod.rs  request.rs  response.rs
src/provider/: mod.rs
src/repositories/: hello_repository.rs  mod.rs  repository.rs  tracker_repository.rs
src/services/: hello_service.rs  mod.rs  service.rs  tracker_service.rs
src/types/: mod.rs
