[package]
name = "CycleTracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "msgpack", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
mongodb = { version = "2.3.0" }